--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,21 @@
 name: velocity_bloc
 description: Minimalist and Easy State Management for Bloc Inspired from Dart Generics.
-version: 1.1.3
+version: 1.1.4
 homepage: https://velocitybloc.dev
 repository: https://github.com/codersangam/velocity_bloc
 examples: https://github.com/codersangam/velocity_bloc/tree/main/example
 demo: https://demo.velocitybloc.dev
 
 environment:
-  sdk: ">=2.18.2 <3.0.0"
+  sdk: ">=2.18.2 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
-  bloc: ^8.1.1
+  bloc: ^8.1.2
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +24,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+screenshots:
+  - description: "Main logo of VelocityBloc"
+    path: example/screenshots/main_logo.png
 
 # The following section is specific to Flutter packages.
 flutter:
