--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,26 +1,28 @@
 name: velocity_bloc
 description: Minimalist and Easy State Management for Bloc Inspired from Dart Generics.
-version: 1.1.4
+version: 1.2.0
 homepage: https://velocitybloc.dev
 repository: https://github.com/codersangam/velocity_bloc
 examples: https://github.com/codersangam/velocity_bloc/tree/main/example
 demo: https://demo.velocitybloc.dev
+documentation: https://velocitybloc.dev
+topics: [bloc, state-management, velocity-bloc]
 
 environment:
-  sdk: ">=2.18.2 <4.0.0"
+  sdk: ">=3.0.0 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
-  bloc: ^8.1.2
+  bloc: ^8.1.4
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.3
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
